fix square wrapping to obey board boundaries

--- a/etch-a-sketch.css
+++ b/etch-a-sketch.css
@@ -1,21 +1,25 @@
 #board {
     background: plum;
     border: 4px solid indigo;
-    width: 530px;
-    height: 530px;
+    width: 500px;
+    height: 500px;
     padding: 10px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
 }
 
-.pixel { /* how to implement automatic sizing of boxes? */
-    border: 1px solid black;
+.board-row {
+    display: flex;
+    width: 100%;
+}
+
+.pixel {
+    flex: 1 0 auto;
+    /* border: 1px solid black; */
+    height: 20px;
     background: white;
-    width: 30px;
-    height: 30px;
     align-self: center;
+    box-sizing: border-box;
 }
 
 .colored {
